--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -257,8 +257,8 @@ ci-fourcolor-dev:
 .ci-odd-order:
   extends: .ci
   variables:
-    CONTRIB_URL: "https://github.com/math-comp/odd-order.git"
-    CONTRIB_VERSION: master
+    CONTRIB_URL: "https://github.com/proux01/odd-order.git"
+    CONTRIB_VERSION: hierarchy-builder
   script:
     - make -j "${NJOBS}"
     - make install
@@ -318,8 +318,8 @@ ci-bigenough-dev:
 .ci-real-closed:
   extends: .ci
   variables:
-    CONTRIB_URL: "https://github.com/math-comp/real-closed.git"
-    CONTRIB_VERSION: master
+    CONTRIB_URL: "https://github.com/proux01/real-closed.git"
+    CONTRIB_VERSION: hierarchy-builder
   script:
     - opam pin add -n -k path coq-mathcomp-real-closed .
     - opam install -y -v -j "${NJOBS}" --deps-only coq-mathcomp-real-closed
@@ -339,8 +339,8 @@ ci-real-closed-dev:
 .ci-finmap:
   extends: .ci
   variables:
-    CONTRIB_URL: "https://github.com/math-comp/finmap.git"
-    CONTRIB_VERSION: master
+    CONTRIB_URL: "https://github.com/proux01/finmap.git"
+    CONTRIB_VERSION: hierarchy-builder
   script:
     - opam pin add -n -k path coq-mathcomp-finmap .
     - opam install -y -v -j "${NJOBS}" --deps-only coq-mathcomp-finmap
@@ -360,8 +360,8 @@ ci-finmap-dev:
 .ci-multinomials:
   extends: .ci
   variables:
-    CONTRIB_URL: "https://github.com/math-comp/multinomials.git"
-    CONTRIB_VERSION: master
+    CONTRIB_URL: "https://github.com/proux01/multinomials.git"
+    CONTRIB_VERSION: hierarchy-builder
   script:
     - opam pin add -n -k path coq-mathcomp-multinomials .
     - opam install -y -v -j "${NJOBS}" --deps-only coq-mathcomp-multinomials
